# layout-visualizer

./: .gitignore  Dockerfile  README.md  example.ipynb  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: deploy.yaml  test.yaml
layout_visualizer/: __init__.py  layout_visualizer.py
layout_visualizer/model/: bbox.py
layout_visualizer/utils/: color.py  path.py  pillow.py
tests/: test_layout_visualizer.py
tests/model/: test_bbox.py
