[tool.poetry]
name = "layout-visualizer"
version = "0.1.0"
description = "Easily draw layout BBoxes"
authors = ["Shunyo Kawamoto <shunyo.kawamoto@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^10.2.0"
pydantic = "^2.6.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ruff = "^0.3.2"
ipykernel = "^6.29.3"
ipywidgets = "^8.1.2"
types-pillow = "^10.2.0.20240213"
psd-tools = "^1.9.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
