[tool.poetry]
name = "layout-visualizer"
version = "0.1.0"
description = "Easily draw layout BBoxes"
authors = ["Shunyo Kawamoto <shunyo.kawamoto@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/shunyooo/layout-visualizer"
repository = "https://github.com/shunyooo/layout-visualizer"

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^10.2.0"
pydantic = "^2.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ruff = "^0.3.2"
ipykernel = "^6.29.3"
ipywidgets = "^8.1.2"
types-pillow = "^10.2.0.20240213"
psd-tools = "^1.9.31"

[tool.poetry-dynamic-versioning]
enable = true
format = "{base}"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
